--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -62,6 +62,44 @@ main {
   height: auto;
 }
 
+.mainnav {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: "Actor", sans-serif;
+}
+.mainnav li {
+  flex: 1 1 auto;
+}
+.mainnav a {
+  text-decoration: none;
+  display: block;
+  padding: 1rem;
+  background-color: #073d74;
+  color: #92f2f0;
+  border: 1px solid #c41c24;
+}
+.mainnav a:hover {
+  color: #c41c24;
+  background-color: #92f2f0;
+}
+
+.heroimage {
+  position: relative;
+}
+.heroimage img {
+  width: 100%;
+  height: auto;
+}
+
+.info p {
+  text-align: left;
+  color: #073d74;
+}
+
+/*Home CSS*/
 .subject1 {
   display: grid;
   grid-template-areas:
@@ -71,6 +109,7 @@ main {
 }
 .subject1 h2 {
   grid-area: a;
+  margin-left: -1rem;
 }
 .subject1 p {
   grid-area: b;
@@ -80,6 +119,8 @@ main {
   box-shadow: -5px 6px 1em;
   grid-area: c;
   margin-left: 1rem;
+  height: 350px;
+  width: auto;
 }
 
 .subject2 {
@@ -95,6 +136,7 @@ main {
 }
 .subject2 p {
   grid-area: c;
+  margin-right: 1rem;
   text-align: right;
   color: #073d74;
 }
@@ -102,6 +144,9 @@ main {
   box-shadow: 5px 6px 1em;
   grid-area: a;
   margin-right: 1rem;
+  margin-left: -1rem;
+  height: 350px;
+  width: auto;
 }
 
 .subject3 h2 {
@@ -112,47 +157,14 @@ main {
   color: #073d74;
 }
 
-.mainnav {
-  list-style-type: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  font-family: "Actor", sans-serif;
-}
-
-.mainnav li {
-  flex: 1 1 auto;
-}
-
-.mainnav a {
-  text-decoration: none;
-  display: block;
-  padding: 1rem;
-  background-color: #073d74;
-  color: #92f2f0;
-  border: 1px solid #c41c24;
-}
-
-.mainnav a:hover {
-  color: #c41c24;
-  background-color: #92f2f0;
-}
-
-.heroimage {
-  position: relative;
-  width: 100%;
-  height: auto;
-}
-
 .reserve a {
   text-decoration: none;
   background-color: #073d74;
   border: 1px solid #adb3ff;
-  width: 200px;
+  width: 250px;
   text-align: center;
   position: absolute;
-  top: 45px;
+  top: 70px;
   right: 200px;
 }
 .reserve h3,
@@ -170,7 +182,172 @@ p {
   background-color: #c41c24;
 }
 
-.info p {
-  text-align: left;
+/*Schedule/Dates CSS*/
+.subject1-2 {
+  display: grid;
+  grid-template-areas:
+    "a c c"
+    "b c c";
+  padding: 1rem;
+}
+.subject1-2 h2 {
+  grid-area: a;
+  margin-left: -1rem;
+}
+.subject1-2 p {
+  grid-area: b;
   color: #073d74;
+}
+.subject1-2 strong{
+  font-size: 15px;
+  margin-left: -1rem;
+  color: #000;
+}
+.subject1-2 img {
+  box-shadow: -5px 6px 1em;
+  grid-area: c;
+  margin-left: 1rem;
+  width: 467px;
+  height: auto;
+}
+
+.subject2-2 {
+  display: grid;
+  grid-template-areas:
+    "a c c"
+    "b c c";
+  padding: 1rem;
+}
+.subject2-2 h2 {
+  grid-area: a;
+  margin-left: -1rem;
+}
+.subject2-2 p {
+  grid-area: b;
+  color: #073d74;
+}
+.subject2-2 strong{
+  font-size: 15px;
+  margin-left: -1rem;
+  color: #000;
+}
+.subject2-2 img {
+  box-shadow: -5px 6px 1em;
+  grid-area: c;
+  margin-left: 1rem;
+  height: 350px;
+  width: auto;
+}
+
+.reserve2 a {
+  text-decoration: none;
+  background-color: #073d74;
+  border: 1px solid #adb3ff;
+  width: 250px;
+  text-align: center;
+  position: absolute;
+  top: 80px;
+  right: 100px;
+}
+.reserve2 h3,
+p {
+  color: #92f2f0;
+}
+.reserve2 h3 {
+  font-size: 25px;
+}
+.reserve2 p {
+  font-size: 20px;
+}
+.reserve2 a:hover {
+  color: #92f2f0;
+  background-color: #c41c24;
+}
+
+/*Prices CSS*/
+.subject1-3 {
+  display: grid;
+  grid-template-areas:
+    "a a b"
+    "a a c";
+  padding: 1rem;
+}
+.subject1-3 h2 {
+  grid-area: b;
+  text-align: right;
+}
+.subject1-3 p {
+  grid-area: c;
+  margin-right: 1rem;
+  text-align: right;
+  color: #073d74;
+}
+.subject1-3 strong{
+  font-size: 15px;
+  margin-right: -1rem;
+  color: #000;
+}
+.subject1-3 img {
+  box-shadow: 5px 6px 1em;
+  grid-area: a;
+  margin-right: 1rem;
+  margin-left: -1rem;
+  height: 350px;
+  width: auto;
+}
+
+.subject2-3 {
+  display: grid;
+  grid-template-areas:
+    "a a b"
+    "a a c";
+  padding: 1rem;
+}
+.subject2-3 h2 {
+  grid-area: b;
+  text-align: right;
+}
+.subject2-3 p {
+  grid-area: c;
+  margin-right: 1rem;
+  text-align: right;
+  color: #073d74;
+}
+.subject2-3 strong{
+  font-size: 15px;
+  margin-right: -1rem;
+  color: #000;
+}
+.subject2-3 img {
+  box-shadow: 5px 6px 1em;
+  grid-area: a;
+  margin-right: 1rem;
+  margin-left: -1rem;
+  height: 350px;
+  width: auto;
+}
+
+.reserve3 a {
+  text-decoration: none;
+  background-color: #073d74;
+  border: 1px solid #adb3ff;
+  width: 250px;
+  text-align: center;
+  position: absolute;
+  top: 60px;
+  left: 150px;
+}
+.reserve3 h3,
+p {
+  color: #92f2f0;
+}
+.reserve3 h3 {
+  font-size: 25px;
+}
+.reserve3 p {
+  font-size: 20px;
+}
+.reserve3 a:hover {
+  color: #92f2f0;
+  background-color: #c41c24;
 }
