--- a/gamenight/css/style.css
+++ b/gamenight/css/style.css
@@ -11,6 +11,7 @@ h2,
 h3 {
   color: #e40066;
   text-align: center;
+  font-family: 'Acme', sans-serif;
 }
 h1 {
   font-size: 2rem;
@@ -28,6 +29,7 @@ p {
   font-size: 1rem;
   line-height: 2rem;
   text-align: center;
+  font-family: 'Archivo Narrow', sans-serif;
 }
 
 header,
